Add: Add clang and clang-format in docker image

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -4,8 +4,6 @@ VOLUME /work
 WORKDIR /work
 
 RUN apt-get update
-RUN apt-get install inotify-tools make
-
-ENV CC=gcc
+RUN apt-get install -y inotify-tools make clang clang-format
 
 CMD ["make", "watch"]
