--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -22,12 +22,12 @@ jobs:
         SANITIZER: ${{ matrix.sanitizer }}
         CC: ${{ matrix.compiler }}
   check_style:
-    name: code style
+    name: check code style
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: Prepare run-clang-format
       run: |
-        wget https://github.com/Sarcasm/run-clang-format/blob/master/run-clang-format.py
+        wget https://raw.githubusercontent.com/Sarcasm/run-clang-format/master/run-clang-format.py
         chmod +x run-clang-format.py
     - run: ./run-clang-format.py -r src
