--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -26,12 +26,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Install clang-format
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends clang-format
-    - name: Prepare run-clang-format
-      run: |
-        wget https://raw.githubusercontent.com/Sarcasm/run-clang-format/master/run-clang-format.py
-        chmod +x run-clang-format.py
-    - run: ./run-clang-format.py -r src
+    - run: make style.image
+    - run: git diff --exit-code
