--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -21,6 +21,8 @@ jobs:
         DEBUG: ${{ matrix.debug }}
         SANITIZER: ${{ matrix.sanitizer }}
         CC: ${{ matrix.compiler }}
+        # TODO: remove memory leaks
+        ASAN_OPTIONS: detect_leaks=0
   check_style:
     name: check code style
     runs-on: ubuntu-latest
